chapter_02/ToDo_app/log-message-processor/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
  labels:
    app: log-message-processor
    redis-access: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-message-processor
  template:
    metadata:
      labels:
        app: log-message-processor
    spec:
      containers:
      - name: log-message-processor
        image: mihirshah99/log-message:latest
