chapter_02/ToDo_app/log-message-processor/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: log-message-processor
spec:
  podSelector:
    matchLabels:
      app: log-message-processor
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis-queue
    ports:
    - port: 6379
      protocol: TCP
